--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ pandas>=0.18.1
 scipy>=0.18.1
 Cython>=0.25.1
 ipython>=5.1.0
-joblib==0.14.1
+joblib # Remove specific version constraint
 memory_profiler>=0.41
 numexpr>=2.6.1
 psutil>=5.0.0
-scikit-learn>=0.18.1
+scikit-learn # Remove specific version constraint or keep >=0.18.1
 sphinx_gallery>=0.1.13
-munkres<=1.0.12
+munkres # Remove specific version constraint
